[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game/world/entity/entities/enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rodder/state_machine/RodderState.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/resources/sprite_frames/char/RodderSpriteFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rodder/state_machine/RodderWalkState.gd" type="Script" id=4]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rodder/state_machine/RodderShootState.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rodder/RodderSprite.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[node name="Rodder" instance=ExtResource( 1 )]
collision_mode = 2
player_detection_range_in_tiles = 32.0
detect_player_on_visible = true

[node name="BodyShape" parent="." index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="InHitBox" parent="." index="2"]
position = Vector2( 0, 5 )

[node name="BodyShape" type="CollisionShape2D" parent="InHitBox" index="0"]
shape = SubResource( 1 )

[node name="OutHitBox" parent="." index="3"]
position = Vector2( 0, 5 )

[node name="BodyShape" type="CollisionShape2D" parent="OutHitBox" index="0"]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" parent="." index="4"]
position = Vector2( 0, 4.5 )
scale = Vector2( 0.4, 0.75 )

[node name="EnemyFSM" parent="." index="5"]
__inital_state = NodePath("RodderWalkState")

[node name="RodderWalkState" parent="EnemyFSM" index="2" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="WalkTimer" type="Timer" parent="EnemyFSM/RodderWalkState" index="0"]
wait_time = 0.2
one_shot = true

[node name="RodderShootState" parent="EnemyFSM" index="3" instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="ShootTimer" type="Timer" parent="EnemyFSM/RodderShootState" index="0"]
wait_time = 0.67

[node name="EnemySprite" parent="." index="6"]
position = Vector2( 0, -4 )
frames = ExtResource( 3 )
animation = "walk"
frame = 1
playing = true
script = ExtResource( 6 )

[connection signal="timeout" from="EnemyFSM/RodderWalkState/WalkTimer" to="EnemyFSM/RodderWalkState" method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="EnemyFSM/RodderShootState/ShootTimer" to="EnemyFSM/RodderShootState" method="_on_ShootTimer_timeout"]
